--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.5",
     "gh-pages": "^6.1.1",
     "lava": "file:..",
     "react": "^18.2.0",
