--- a/server/vercel.json
+++ b/server/vercel.json
@@ -12,9 +12,7 @@
             "dest": "/index.js"
         }
     ],
-    "functions": [
-        {
-            "timeout": 60
-        }
-    ]
+    "functions": {
+        "timeout": 60
+    }
 }
