--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,15 +4,19 @@
         {
             "src": "index.js",
             "use": "@vercel/node"
+        },
+        {
+            "src": "api/*.js",
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "/index.js"
+            "handle": "index"
+        },
+        {
+            "src": "/api/(.*)",
+            "dest": "api/$1"
         }
-    ],
-    "functions": {
-        "timeout": 60
-    }
+    ]
 }
