--- a/server/vercel.json
+++ b/server/vercel.json
@@ -12,7 +12,7 @@
     ],
     "routes": [
         {
-            "handle": "index"
+            "handle": "server"
         },
         {
             "src": "/api/(.*)",
