--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,14 +6,14 @@
             "use": "@vercel/node"
         },
         {
-            "src": "api/*.js",
+            "src": "/*.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "api/$1"
+            "src": "/(.*)",
+            "dest": "/$1"
         }
     ]
 }
