--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,5 +11,15 @@
             "src": "/(.*)",
             "dest": "/"
         }
-    ]
+    ],
+    "functions": {
+        "./index.js": {
+            "memory": 3008,
+            "maxDuration": 30
+        },
+        "./*.js": {
+            "memory": 3008,
+            "maxDuration": 30
+        }
+    }
 }
