--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,23 +1,11 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
-    ],
     "functions": {
-        "./index.js": {
+        "api/index.js": {
             "memory": 3008,
             "maxDuration": 30
         },
-        "./*.js": {
+        "api/*.js": {
             "memory": 3008,
             "maxDuration": 30
         }
