--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,7 +1,6 @@
 {
-    "version": 2,
     "functions": {
-        "api/index.js": {
+        "api/test.js": {
             "memory": 3008,
             "maxDuration": 30
         },
