--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "start-vercel": "vercel dev",
+    "deploy-vercel": "vercel deploy --prod"
   },
   "keywords": [],
   "author": "",
+  "engines": {
+    "node": "v18.16.1"
+  },
   "license": "ISC",
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
