--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,10 +1,15 @@
 {
-    "functions": {
-        "/index.js": {
-            "maxDuration": 30
-        },
-        "/*.js": {
-            "maxDuration": 15
+    "version": 2,
+    "builds": [
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
         }
-    }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
+    ]
 }
