--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "server": "nodemon index.js",
+    "start-dev": "nodemon index.js",
     "start-vercel": "vercel dev",
     "deploy-vercel": "vercel deploy --prod"
   },
