--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,18 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
+# dependencies
 node_modules
-dist
-dist-ssr
-*.local
 
+# production
+build
+dist
+  
+# misc
+package.json.bak
+.DS_Store
+
+# config file
 .env
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-.vercel
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log* 
