--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,6 +1,5 @@
 {
     "version": 2,
-    "name": "mern-lava-client",
     "builds": [
         {
             "src": "index.js",
@@ -10,7 +9,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/index.js"
+            "dest": "/"
         }
     ]
 }
