--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "server": "nodemon index.js",
+    "build": "npm install",
     "start-dev": "nodemon index.js",
     "start-vercel": "vercel dev",
     "deploy-vercel": "vercel deploy --prod"
